fixe Aufteilung gelöst :)
siehe dazu auch html {...} --> Bezug: Scrollbar einblenden wegen center jump

--- a/CSS/mainFlexBased.css
+++ b/CSS/mainFlexBased.css
@@ -18,6 +18,9 @@
 /*############################################################################*/
 
 /*##############################Basislayout###################################*/
+html { /*Scrollbar erzwingen um centering jump zu vermeiden*/
+       overflow-y: scroll;
+}
 body > header:first-of-type {
     box-sizing: border-box;
     background-color: green;
@@ -38,8 +41,7 @@ article {
     box-shadow: 0px 5px 9px 10px rgba(222,222,222,1);
     box-sizing: border-box;
     padding: 16px;
-    flex-grow: 1;
-    max-width: 60%
+    flex-basis: 60%;
     background-color: var(--kontrastfarbeHell);
 }
 article h2 {
@@ -302,7 +304,7 @@ table.simpleTable td {
     visibility: hidden;
     opacity: 0;
     padding: 8px 8px;
-    left:17px;
+    right:17px;
     text-decoration: none;
     text-align: center;
     background-color: var(--farbe4);
@@ -336,7 +338,7 @@ table.simpleTable td {
 @media screen and ( max-width: 460px ) {
   a.headjumper {
     padding: 3px 4px;
-    left: 5px;
+    right: 5px;
   }
 }
 /******************************************************************************/
